fixed grid jumping when moving scroll in mobile view. moving on to fixing console size

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -37,6 +37,7 @@
 }
 
 .inventory {
+  margin-bottom: 25vh;
   display: grid;
   grid-template-columns: repeat(12, 3.5vw);
   grid-template-rows: repeat(5, 3.5vw);
@@ -60,7 +61,7 @@
 }
 
 .help-text {
-  /* margin-top: 10vh; */
+  margin-bottom: 10vh;
 }
 
 .cell {
@@ -81,7 +82,7 @@
 @media (max-width: 500px) {
   .App {
     display: grid;
-    grid-template-rows: 1fr 1fr 5vh;
+    grid-template-rows: 1fr 1fr 1vh;
     grid-template-areas:
       "content"
       "code"
@@ -106,11 +107,23 @@
     height: 7vw;
   }
   .inventory {
+    /* margin-top: -5vh; */
+    /* position: absolute; */
+    margin-bottom: 0;
+
+    /* margin-top: 2vh; */
     grid-template-columns: repeat(12, 7vw);
     grid-template-rows: repeat(5, 7vw);
+    align-self: flex-end;
+  }
+
+  .console {
+    height: 10%;
   }
 
   .help-text {
-    margin-top: 1vh;
+    /* margin: 0; */
+
+    /* margin-top: 1vh; */
   }
 }
